anadiendole algunos cambioos al ejercicio 1

--- a/CP#9.tex
+++ b/CP#9.tex
@@ -34,10 +34,10 @@
 
 \begin{equation*}
     \begin{array}{rcccccl}
-        EX            & = & 2(0.4)          & + & 4(a+0.2)             & + & 6(b+0.2)
+        EX            & = & 2(\frac{4}{10})          & + & 4(a+\frac{2}{10})             & + & 6(b+\frac{2}{10})
         \\
         \\
-        EX            & = & 2 * \frac{2}{5} & + & 4a + 4 * \frac{1}{5} & + & 6b + 6 * \frac{1}{5}
+        EX            & = & 2 \left(\frac{2}{5}\right)  & + & 4a + 4 \left(\frac{1}{5}\right))  & + & 6b + 6 \left(\frac{1}{5}\right) 
         \\
         \\
         EX            & = & \frac{4}{5}     & + & 4a + \frac{4}{5}     & + & 6b + \frac{6}{5}
@@ -170,6 +170,21 @@ Para que X y Y sean independientes tiene que cumplirse:
 \end{flushleft}
 
 
+\subsection*{1-d) Calcular $E\left(XY\right)$ }
+
+\begin{equation*}
+    \begin{array}{rcl}
+        E\left(XY\right) & = & \displaystyle 2 \left(\frac{1}{10}\right) + 10 \left(\frac{3}{10}\right) + 4 \left(\frac{1}{10}\right)
+        \\
+        \\
+        && \displaystyle  +  12 \left(\frac{2}{10}\right) + 18 \left(\frac{2}{10}\right) + 30 \left(\frac{1}{10}\right)
+        \\
+        \\
+        \displaystyle E\left(XY\right) & = & \displaystyle \frac{126}{100} = 12.6
+    \end{array}
+\end{equation*}
+
+
 \section*{Ejercicio 2}
 
 \subsection*{2-a)  Determinar la funciones de probabilidad marginales }
@@ -285,6 +300,19 @@ Ahora nos queda que :
     \end{tabular}
 \end{center}
 
+
+\begin{flushleft}
+    Vamos ahora a calcular el valor esperado de $X|Y=2$
+\end{flushleft}
+
+\begin{equation*}
+    \begin{array}{rcl}
+        \displaystyle E\left(X|Y=2\right) & = & \displaystyle 4 \left(\frac{1}{2}\right) + 6 \left(\frac{1}{4}\right) + 10\left(\frac{1}{4}\right)
+        \\
+        \\
+        \displaystyle E\left(X|Y=2\right) & = & 6
+    \end{array}
+\end{equation*}
 
 
 \subsection*{2-c)  Determinar si X y Y  son independientes}
